--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "https": "^1.0.0",
     "jwt-simple": "^0.5.1",
     "mongodb": "^2.2.28",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
