--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/lodash": "^4.14.68",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "https": "^1.0.0",
     "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.28",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
